--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Doe vida, doe sangue! </title>
+    <title> DOE vida, DOE sangue! </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,31 +15,31 @@
         <p>Apenas 1,9% da população brasileira doa sangue</p>
         <p>Até 3 vidas são salvas com 1 doação</p>
         <button>Quero ajudar</button>
-
-        <section class="form">
-            <h2>Entre na lista de doadores</h2>
-            <form action="/">
-                <input 
-                    type="text"
-                    name="name"
-                    placeholder="Nome Completo">
-            </form>
-            <input 
-                    type="text"
-                    name="email"
-                    placeholder="Email">
-            </form>
-            <input 
-                    type="text"
-                    name="blood"
-                    placeholder="Tipo Sanguíneo">
-            </form>
-            <button>Quero ajudar</button>
-        </section>
     </header>
 
+    <section class="form">
+        <h2>Entre na lista de doadores</h2><b>
+        <form action="/">
+            <input 
+                type="text"
+                name="name"
+                placeholder="Nome Completo">
+        </form>
+        <input 
+                type="text"
+                name="email"
+                placeholder="Email">
+        </form>
+        <input 
+                type="text"
+                name="blood"
+                placeholder="Tipo Sanguíneo">
+        </form>
+        <button>Quero ajudar</button>
+    </section>
+    
     <main>
-            <h2>Últimos doadores</h2>
+        <h2>Últimos doadores</h2>
             <section class="donors">
                 <div class="donor">
                     <div class="blood">AB+</div>
