--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
                 name="name"
                 placeholder="Nome Completo">
         </form>
+        <form action="/">
         <input 
                 type="text"
                 name="email"
                 placeholder="Email">
         </form>
+        <form action="/">
         <input 
                 type="text"
                 name="blood"
@@ -37,7 +39,7 @@
         </form>
         <button>Quero ajudar</button>
     </section>
-    
+
     <main>
         <h2>Últimos doadores</h2>
             <section class="donors">
@@ -59,6 +61,7 @@
                 </div>
             </section>
     </main>
+
     <footer> Tecnologia salvando vidas ❤️</footer>
 </body>
 
