--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="utf-8">
     <title> DOE vida, DOE sangue! </title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>DOE</h1>
+        <h1><img
+            class="logo"
+            src="logo.png"
+            alt="Logo DOE">
+        </h1>
         <h2>A sua doação importa!</h2>
         <p>Mais de 38.000 doações são necessárias todos os dias</p>
         <p>Apenas 1,9% da população brasileira doa sangue</p>
@@ -41,10 +46,10 @@
     </section>
 
     <main>
-        <h2>Últimos doadores</h2>
+        <h2>Últimos <span>doadores</span></h2>
             <section class="donors">
                 <div class="donor">
-                    <div class="blood">AB+</div>
+                    <div class="blood">A+</div>
                     <p>Alan Alves</p>
                 </div>
                 <div class="donor">
@@ -52,11 +57,11 @@
                     <p>Gustavo Souza</p>
                 </div>
                 <div class="donor">
-                    <div class="blood">O+</div>
+                    <div class="blood">AB+</div>
                     <p>José Airton</p>
                 </div>
                 <div class="donor">
-                    <div class="blood">A+</div>
+                    <div class="blood">O+</div>
                     <p>Lucas Silva</p>
                 </div>
             </section>
