--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -10,12 +10,11 @@
 
 <body>
     <header>
-        <h1><img
+        <img
             class="logo"
             src="logo.png"
             alt="Logo DOE">
-        </h1>
-        <h2>A sua doação importa!</h2>
+        <h!>A sua doação importa!</h1>
         <p>Mais de 38.000 doações são necessárias todos os dias</p>
         <p>Apenas 1,9% da população brasileira doa sangue</p>
         <p>Até 3 vidas são salvas com 1 doação</p>
