Adicionado hide no form

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             class="logo"
             src="logo.png"
             alt="Logo DOE">
-        <h!>A sua doação importa!</h1>
+        <h2>A sua doação importa!</h2>
         <p>Mais de 38.000 doações são necessárias todos os dias</p>
         <p>Apenas 1,9% da população brasileira doa sangue</p>
         <p>Até 3 vidas são salvas com 1 doação</p>
         <button>Quero ajudar</button>
     </header>
 
-    <section class="form">
+    <section class="form hide" >
         <h2>Entre na lista de doadores</h2><b>
         <form action="/">
             <input 
@@ -67,6 +67,8 @@
     </main>
 
     <footer> Tecnologia salvando vidas ❤️</footer>
+
+    <script src="scripts.js"></script>
 </body>
 
 </html>
