--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title> DOE vida, DOE sangue! </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <img
             class="logo"
-            src="logo.png"
+            src="/logo.png"
             alt="Logo DOE">
         <h2>A sua doação importa!</h2>
         <p>Mais de 38.000 doações são necessárias todos os dias</p>
@@ -68,7 +68,7 @@
 
     <footer> Tecnologia salvando vidas ❤️</footer>
 
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 </body>
 
 </html>
