--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    
+
 <head>
     <meta charset="utf-8">
     <title> DOE vida, DOE sangue! </title>
@@ -10,10 +10,7 @@
 
 <body>
     <header>
-        <img
-            class="logo"
-            src="/logo.png"
-            alt="Logo DOE">
+        <img class="logo" src="/logo.png" alt="Logo DOE">
         <h2>A sua doação importa!</h2>
         <p>Mais de 38.000 doações são necessárias todos os dias</p>
         <p>Apenas 1,9% da população brasileira doa sangue</p>
@@ -21,49 +18,31 @@
         <button>Quero ajudar</button>
     </header>
 
-    <section class="form hide" >
+    <section class="form hide">
         <h2>Entre na lista de doadores</h2><b>
-        <form action="/">
-            <input 
-                type="text"
-                name="name"
-                placeholder="Nome Completo">
-        </form>
-        <form action="/">
-        <input 
-                type="text"
-                name="email"
-                placeholder="Email">
-        </form>
-        <form action="/">
-        <input 
-                type="text"
-                name="blood"
-                placeholder="Tipo Sanguíneo">
+            <form action="/">
+                <input type="text" name="name" placeholder="Nome Completo">
+            </form>
+            <form action="/">
+                <input type="text" name="email" placeholder="Email">
+            </form>
+            <form action="/">
+                <input type="text" name="blood" placeholder="Tipo Sanguíneo">
                 <button>Quero ajudar</button>
-        </form>
+            </form>
     </section>
 
     <main>
         <h2>Últimos <span>doadores</span></h2>
-            <section class="donors">
-                <div class="donor">
-                    <div class="blood">A+</div>
-                    <p>Alan Alves</p>
-                </div>
-                <div class="donor">
-                    <div class="blood">B+</div>
-                    <p>Gustavo Souza</p>
-                </div>
-                <div class="donor">
-                    <div class="blood">AB+</div>
-                    <p>José Airton</p>
-                </div>
-                <div class="donor">
-                    <div class="blood">O+</div>
-                    <p>Lucas Silva</p>
-                </div>
-            </section>
+
+        <section class="donors">
+            {%  for donor in donors %}
+            <div class="donor">
+                <div class="blood">{{donor.blood}}</div>
+                <p>{{donor.name}}</p>
+            </div>
+            {%endfor%}
+        </section>
     </main>
 
     <footer> Tecnologia salvando vidas ❤️</footer>
