Add POST no form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="form hide">
         <h2>Entre na lista de doadores</h2><b>
-            <form action="/">
+            <form action="/" method="POST">
                 <input type="text" name="name" placeholder="Nome Completo">
             </form>
             <form action="/">
